# rikaisama-eplkup

./: .gitignore  CMakeLists.txt  eplkup.c  eplkup_data.c  eplkup_font.c  eplkup_gaiji.h  eplkup_hook_handler.c  eplkup_utils.c  gaiji_table_chujiten.c  gaiji_table_daijirin.c  gaiji_table_daijisen.c  gaiji_table_genius.c  gaiji_table_kojien.c  gaiji_table_meikyojj.c  gaiji_table_meikyou.c  gaiji_table_snmkg99.c  gaiji_table_wadai5.c
